Bug 313967: function body parser use the shared recycle list. r=brendan